# Emotion-detector

./: calculate.py  gray_img.py  keyboard.py  main.py  pyproject.toml  trial.py
