[project]
name = "emotion-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmake>=4.0.2",
    "flet[all]==0.28.3",
    "imutils>=0.5.4",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
]
